[gd_scene load_steps=8 format=3 uid="uid://duwlhtwcqgncq"]

[ext_resource type="Script" uid="uid://ba35sc0t5sky5" path="res://scenes/grids/income/income_data_row.gd" id="1_e6oim"]
[ext_resource type="Texture2D" uid="uid://bnql2gchxfc1v" path="res://assets/final/income-streams/debt-collection.png" id="2_vchko"]
[ext_resource type="Texture2D" uid="uid://dw1tl7tuymdy7" path="res://assets/final/step-into.png" id="3_vchko"]
[ext_resource type="Texture2D" uid="uid://pqovl4gfwbug" path="res://assets/final/step-into-pressed.png" id="4_ldsg2"]
[ext_resource type="Texture2D" uid="uid://dj7k3veq6gkul" path="res://assets/final/step-into-hover.png" id="5_vchko"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6yeq"]
bg_color = Color(0.8235294, 0.87058824, 0.76862746, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oec2"]
bg_color = Color(0.3758189, 0.67945707, 0.44915903, 1)

[node name="Control" type="Control"]
custom_minimum_size = Vector2(510.91, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 64.0
script = ExtResource("1_e6oim")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_right = 511.0
offset_bottom = 64.0
theme_override_styles/background = SubResource("StyleBoxFlat_q6yeq")
theme_override_styles/fill = SubResource("StyleBoxFlat_1oec2")
show_percentage = false

[node name="IncomeDataRow" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 510.0
offset_bottom = 64.0

[node name="ImageTextureRect" type="TextureRect" parent="IncomeDataRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_vchko")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="IncomeDataRow"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="IncomeDataRow"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Collect Debt from Mario Pizzaface"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="IncomeDataRow"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="StatusTexture" type="TextureRect" parent="IncomeDataRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer3" type="MarginContainer" parent="IncomeDataRow"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="DetailsButton" type="TextureButton" parent="IncomeDataRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_vchko")
texture_pressed = ExtResource("4_ldsg2")
texture_hover = ExtResource("5_vchko")
stretch_mode = 0

[connection signal="button_up" from="IncomeDataRow/DetailsButton" to="." method="_on_details_button_button_up"]
